# WorkApp

./: .gitignore  CMakeLists.txt  main.cpp  main.qml  qml.qrc
applicationservices/: applicationservices.cpp  applicationservices.h
configuration/: ColorConstants.qml  CustomDialogConstants.qml  SharedConstants.qml  qmldir
controller/: controller.cpp  controller.h
customdialog/cpp/: customdialog.cpp  customdialog.h  customdialogservice.cpp  customdialogservice.h
customdialog/qml/: CustomDialog.qml
data/: customdialogdata.json  logindata.json
dataservice/: dataservice.cpp  dataservice.h
dataset/: customdialogdataset.h  inputcomponentdataset.h
inputcomponent/cpp/: inputcomponentservice.cpp  inputcomponentservice.h
inputcomponent/qml/: InputComponent.qml
loginwindow/cpp/: loginwindowservice.cpp  loginwindowservice.h
loginwindow/qml/: LoginWindow.qml
rectanglebutton/: RectangleButton.qml
rectanglebutton/cpp/: rectanglebuttonservice.cpp  rectanglebuttonservice.h
rectanglebutton/qml/: RectangleButton.qml
srcback/controller/: controller.cpp  controller.h
srcback/customdialogservice/: customdialogservice.cpp  customdialogservice.h
srcback/dataservice/: dataservice.cpp  dataservice.h
srcback/dataset/: customdialogdataset.h  windowmanagerdataset.h
srcback/loginwindowservice/: loginwindowservice.cpp  loginwindowservice.h
srcback/registerwindowservice/: registerwindowservice.cpp  registerwindowservice.h
srcback/windowmanager/: windowmanager.cpp  windowmanager.h
srcback/windowservice/: windowservice.h
srcgui/configuration/: InputComponentConstants.qml  SharedConstants.qml  WindowConstants.qml  WindowManagerConstants.qml  qmldir
srcgui/customdialog/: CustomDialog.qml
srcgui/inputcomponent/: InputComponent.qml
srcgui/loginwindow/: LoginWindow.qml
srcgui/rectanglesolidborder/: RectangleSolidBorder.qml
srcgui/registerwindow/: RegisterWindow.qml
